Testing two chromosomes on 18 individuals

--- a/902-cnvs.Rmd
+++ b/902-cnvs.Rmd
@@ -25,11 +25,18 @@ Need to normalize. Divide by average depth?
 
 
 ```{r}
-m58<-read_csv("~/github/lates-wgs/meta/58-Indo-split.csv")
+msub<-read_csv("~/github/lates-wgs/meta/58-Indo-split.csv") %>% 
+  filter(Region %in% c("Queensland","India Eastern Coast","India Western Coast","Indonesia-K",
+                       "Indonesia-SJ","Indonesia-SU"))
 ```
 
 ```{r}
-commands<-m58 %>% mutate(Command=paste0("samtools depth -a ", Path, " | awk '{print $1, $2, $3, $3/",Coverage,"}' ", " | grep NC ", ">", " outputs/902/",Run,".coverage"))
+commands<-msub %>% mutate(Command=paste0("samtools view -bh -r NC_066833.1,NC_066834.1 ", Path, " | samtools depth -a - | awk '{print $1, $2, $3, $3/",Coverage,"}' ", ">", " outputs/902/",Run,".coverage"))
 
 commands %>% select(Command) %>% write_tsv("902-coverage.sh", col_names = FALSE)
 ```
+
+module load parallel
+ 
+srun -p high --time 12:00:00 --nodes=1 --ntasks-per-node=1 --cpus-per-task=18 parallel -j 18 < 902-coverage.sh
+
