--- a/902-cnvs.Rmd
+++ b/902-cnvs.Rmd
@@ -20,21 +20,25 @@ Indonesia (K, SU, SJ)
 
 Need to normalize. Divide by average depth?
 
-1 2 3 = 6, 1/2, 1, 3/2 = 3
-1 1 1 = 1, 1 + 1 +1 = 3
+1 2 3 = 6/3=2, 1/2, 1, 3/2 = 3
+1 1 1 = 3/3=1, 1/1 + 1/1 +1/1 = 3
 
 
 ```{r}
 msub<-read_csv("~/github/lates-wgs/meta/58-Indo-split.csv") %>% 
   filter(Region %in% c("Queensland","India Eastern Coast","India Western Coast","Indonesia-K",
                        "Indonesia-SJ","Indonesia-SU"))
+
+msub %>% select(Run) %>% write_tsv("outputs/902/runs.tsv", col_names = FALSE)
 ```
 
 ```{r}
-commands<-msub %>% mutate(Command=paste0("samtools view -bh -r NC_066833.1,NC_066834.1 ", Path, " | samtools depth -a - | awk '{print $1, $2, $3/",Coverage,"\t",Run,"}' ", ">", " outputs/902/",Run,".coverage"))
+commands<-msub %>% mutate(Command=paste0("samtools depth -a ", Path, " | awk '{print $1, $2, $3, $3/",Coverage, ", ",Coverage,","," \042",Run, "\042}' ", " | grep NC ",  ">", " outputs/902/",Run,".coverage"))
 
 commands %>% select(Command) %>% write_tsv("902-coverage.sh", col_names = FALSE)
 ```
+
+Removing double quotes after the fact.
 
 module load parallel
  
@@ -44,3 +48,60 @@ Combine into a tidy format.
 
 Chrom Pos Depth Individual
 ~ X Z Y
+
+These are so big, perhaps I can write a script to visualize them on the cluster.  I can also reduce the size with a sliding window: https://shearnrylan.wordpress.com/2016/05/30/sliding-window-in-awk/
+
+awk -v OFS="\t" 'BEGIN{window=100;slide=50} { if(NR==1) print "coord",$3 } {mod=NR%window; if(NR<=window){count++}else{sum-=array[mod];sum+=$3;array[mod]=$3;} (NR%slide)==0{print NR,sum/count/$5}' test1000
+
+Should produce the same numbers for depth
+
+awk -v OFS="\t" 'BEGIN{window=100;slide=50} { if(NR==1) print "coord",$3,$4 } {mod=NR%window; if(NR<=window){count++}else{sum-=array[mod];sum2-=array2[mod]}sum+=$3;sum2+=$4;array[mod]=$3;array2[mod]=$4;} (NR%slide)==0{print $1,$6,NR,sum/count/$5,sum2/count}' test1000
+
+
+Printing out: Individual, Chrom,Window, average depth over window, normalized depth
+awk -v OFS="\t" 'BEGIN{window=100;slide=50} { if(NR==1) print "coord",$3,$3 } {mod=NR%window; if(NR<=window){count++}else{sum-=array[mod];sum2-=array2[mod]}sum+=$3;sum2+=$3;array[mod]=$3;array2[mod]=$3;} (NR%slide)==0{print $6,$1,NR,sum/count,sum2/count/$5}' test1000
+
+probably need to do this per chrom for each individual, then combine.
+
+```{sh, eval=FALSE}
+grep NC_066833.1 SRR3165594.coverage | awk -v OFS="\t" 'BEGIN{window=10000;slide=5000} { if(NR==1) print "Individual","Chrom","Window","Avg","DepthNorm" } {mod=NR%window; if(NR<=window){count++}else{sum-=array[mod];sum2-=array2[mod]}sum+=$3;sum2+=$3;array[mod]=$3;array2[mod]=$3;} (NR%slide)==0{print $6,$1,NR,sum/count,sum2/count/$5}' > NC_066833.1-SRR3165594.window
+
+grep NC_066833.1 SRR3165595.coverage | awk -v OFS="\t" 'BEGIN{window=10000;slide=5000} { if(NR==1) print "Individual","Chrom","Window","Avg","DepthNorm" } {mod=NR%window; if(NR<=window){count++}else{sum-=array[mod];sum2-=array2[mod]}sum+=$3;sum2+=$3;array[mod]=$3;array2[mod]=$3;} (NR%slide)==0{print $6,$1,NR,sum/count,sum2/count/$5}' > NC_066833.1-SRR3165595.window
+
+grep NC_066833.1 SRR3165629.coverage | awk -v OFS="\t" 'BEGIN{window=10000;slide=5000} { if(NR==1) print "Individual","Chrom","Window","Avg","DepthNorm" } {mod=NR%window; if(NR<=window){count++}else{sum-=array[mod];sum2-=array2[mod]}sum+=$3;sum2+=$3;array[mod]=$3;array2[mod]=$3;} (NR%slide)==0{print $6,$1,NR,sum/count,sum2/count/$5}' > NC_066833.1-SRR3165629.window
+
+grep NC_066833.1 SRR3165630.coverage | awk -v OFS="\t" 'BEGIN{window=10000;slide=5000} { if(NR==1) print "Individual","Chrom","Window","Avg","DepthNorm" } {mod=NR%window; if(NR<=window){count++}else{sum-=array[mod];sum2-=array2[mod]}sum+=$3;sum2+=$3;array[mod]=$3;array2[mod]=$3;} (NR%slide)==0{print $6,$1,NR,sum/count,sum2/count/$5}' > NC_066833.1-SRR3165630.window
+```
+
+
+
+
+```{r}
+files<-list.files(path="outputs/902/", pattern="NC_066833.1*", full.names = TRUE)
+
+depth<-lapply(files, read_tsv)
+depth<-bind_rows(depth) %>% left_join(msub, by=c("Individual"="Run"))
+```
+
+```{r}
+ggplot(depth) + 
+  geom_raster(aes(x=Window, y=Individual, fill=DepthNorm)) +
+  scale_fill_viridis_c(option="plasma") + 
+  facet_grid(Region~Chrom, scales="free_y",) +
+  theme_bw()
+  
+```
+
+
+
+Calculate sliding windows all chroms
+
+```{sh, eval=FALSE}
+cat ../../meta/lates-lgs.txt | while read line; do cat runs.tsv | while read run; do echo grep $line $run.coverage; paste command ; echo $line-$run.window;
+done; done;
+
+
+
+```
+
+maybe paste from file?
